--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 
     </header>
 
-    <section id="splash" class="slide_in">
-        <div class="topbtn">
-            <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-        </div>
+    <section id="splash" class="slide_in"></section>
+    <div class="topbtn">
+        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    </div>
 
-        <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
