--- a/portfolio.html
+++ b/portfolio.html
@@ -39,12 +39,12 @@
 
     </header>
 
-    <section id="portfolio" class="swing_in">
-        <div class="topbtn">
-            <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-        </div>
+    <section id="portfolio" class="swing_in"></section>
+    <div class="topbtn">
+        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    </div>
 
-        <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
