--- a/index.html
+++ b/index.html
@@ -29,13 +29,19 @@
             <nav>
 
                 <a href="index.html"> FORSIDE </a>
-                <a href="portfolio.html"> PORTFOLIO </a>
+                <div class="dropdown">
+                    <a href="portfolio.html"> PORTFOLIO </a>
+                    <div class="dropdown-content">
+                        <a href="portfolio.html">WEB</a>
+                        <a href="#">UX</a>
+                        <a href="#">ANIMATION</a>
+                        <a href="#">INDHOLD</a>
+                    </div>
+                </div>
                 <a href="om.html"> OM MIG </a>
 
             </nav>
-
         </div>
-
 
     </header>
 
