--- a/portfolio.html
+++ b/portfolio.html
@@ -29,17 +29,45 @@
             <nav>
 
                 <a href="index.html"> FORSIDE </a>
-                <a href="portfolio.html"> PORTFOLIO </a>
+                <div class="dropdown">
+                    <a href="portfolio.html"> PORTFOLIO </a>
+                    <div class="dropdown-content">
+                        <a href="portfolio.html">WEB</a>
+                        <a href="#">UX</a>
+                        <a href="#">ANIMATION</a>
+                        <a href="#">INDHOLD</a>
+                    </div>
+                </div>
                 <a href="om.html"> OM MIG </a>
 
             </nav>
-
         </div>
-
 
     </header>
 
-    <section id="portfolio" class="swing_in"></section>
+    <!--    <section id="portfolio" class="swing_in"></section>-->
+
+
+    <section id="portfolio">
+        <section id="gweb">
+            <div class="sectionwrapper"></div>
+
+
+
+        </section>
+
+
+
+
+
+
+
+
+
+    </section>
+
+
+
     <div class="topbtn">
         <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     </div>
