--- a/portfolio.html
+++ b/portfolio.html
@@ -32,10 +32,10 @@
                 <div class="dropdown">
                     <a href="portfolio.html"> PORTFOLIO </a>
                     <div class="dropdown-content">
-                        <a href="portfolio.html">WEB</a>
-                        <a href="#">UX</a>
-                        <a href="#">ANIMATION</a>
-                        <a href="#">INDHOLD</a>
+                        <a href="portfolio.html#gweb">WEB</a>
+                        <a href="portfolio.html#gux">UX</a>
+                        <a href="portfolio.html#ganimation">ANIMATION</a>
+                        <a href="portfolio.html#gindhold">INDHOLD</a>
                     </div>
                 </div>
                 <a href="om.html"> OM MIG </a>
@@ -49,22 +49,111 @@
 
 
     <section id="portfolio">
+
+
         <section id="gweb">
-            <div class="sectionwrapper"></div>
+            <h1>GRUNDLÆGGENDE WEB</h1>
+            <div class="sectionwrapper">
+                <div class="col">
+                    <h2>RESPONSIVE SITE</h2>
+                    <p>I Tema 1, skulle vi lave vores stilartside responsivt.</p>
+                </div>
+                <div class="col">
+                    <div class="container">
+                        <a href="http://sylvesterflaaten.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2/index.html">
+                            <img src="billeder/splash_sylvester.jpg" alt="splashbillede">
+                            <div class="centered">Tryk her for at gå til siden</div>
+                        </a>
+                    </div>
+                </div>
 
 
-
+            </div>
         </section>
 
 
 
+        <section id="gux">
+            <h1>GRUNDLÆGGENDE UX</h1>
+            <div class="sectionwrapper">
+                <div class="col">
+                    <h2>Prototyper</h2>
+                    <p>I Tema 2, skulle vi lave en prototype af en webshop og i gruppearbejde lave en prototype til KEA.</p>
+                </div>
+                <div class="col">
+                    <div class="container">
+                        <a href="https://xd.adobe.com/view/b15a5c5d-dbcb-4eea-6e8b-536cabcaf950-c76b/">
+                            <img src="billeder/vinylen.JPG" alt="splashbillede">
+                            <div class="centered">Tryk her for at gå til siden</div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="container">
+                        <a href="https://xd.adobe.com/view/39f6770a-bb3f-44ca-72ca-490c11e05706-4fc7/">
+                            <img src="billeder/keaplan.jpg" alt="splashbillede">
+                            <div class="centered">Tryk her for at gå til siden</div>
+                        </a>
+                    </div>
+                </div>
 
 
+            </div>
+        </section>
 
 
+        <section id="ganimation">
+            <h1>GRUNDLÆGGENDE ANIMATION</h1>
+            <div class="sectionwrapper">
+                <div class="col">
+                    <h2>ANIMATIONSSPIL</h2>
+                    <p>I Tema 1, skulle vi lave vores stilartside responsivt.</p>
+                </div>
+                <div class="col">
+                    <div class="container">
+                        <a href="http://sylvesterflaaten.dk/kea/04_animation/spil/index.html">
+                            <img src="billeder/Startskaermwr.svg" alt="startskærm">
+                            <div class="centered">Tryk her for at gå til siden</div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="container">
+                        <a href="http://sylvesterflaaten.dk/kea/04_animation/spil_privatsnak_final/index.html">
+                            <img src="billeder/startskaerm.svg" alt="startskærm">
+                            <div class="centered">Tryk her for at gå til siden</div>
+                        </a>
+                    </div>
+                </div>
+
+
+            </div>
+        </section>
+
+        <section id="gindhold">
+            <h1>GRUNDLÆGGENDE INDHOLD</h1>
+            <div class="sectionwrapper">
+                <div class="col">
+                    <h2>Redesign</h2>
+                    <p>I Tema 1, skulle vi lave vores stilartside responsivt.</p>
+                </div>
+                <div class="col">
+                    <div class="container">
+                        <a href="http://sylvesterflaaten.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2/index.html">
+                            <img src="billeder/startskaerm.svg" alt="startskærm">
+                            <div class="centered">Tryk her for at gå til siden</div>
+                        </a>
+                    </div>
+                </div>
+
+
+            </div>
+        </section>
 
 
     </section>
+
+
 
 
 
