--- a/portfolio.html
+++ b/portfolio.html
@@ -138,13 +138,13 @@
                     <p>I Tema 1, skulle vi lave vores stilartside responsivt.</p>
                 </div>
                 <div class="col">
-                    <div class="container">
-                        <a href="http://sylvesterflaaten.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2/index.html">
-                            <img src="billeder/startskaerm.svg" alt="startskærm">
-                            <div class="centered">Tryk her for at gå til siden</div>
-                        </a>
-                    </div>
+                    <div class="video_responsive"><video width="100%" poster="billeder/salen.jpg" controls>
+                            <source src="video/Emdrupkirke1080.mp4" type="video/mp4">
+                            <source src="mov_bbb.ogg" type="video/ogg">
+                            Your browser does not support HTML5 video.
+                        </video></div>
                 </div>
+            </div>
 
 
             </div>
