--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,8 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Handlee&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans|Open+Sans|Raleway&display=swap" rel="stylesheet">
 
     <!--//favicon//-->
     <link rel="apple-touch-icon" sizes="180x180" href="myIcons/apple-touch-icon.png">
@@ -107,7 +109,9 @@
             <div class="sectionwrapper">
                 <div class="col">
                     <h2>ANIMATIONSSPIL</h2>
-                    <p>I Tema 1, skulle vi lave vores stilartside responsivt.</p>
+                    <p>I Tema 1, skulle vi lave vores stilartside responsivt. Under dette forløb har jeg udarbejdet en hjemmeside om stilarten flat design. I løbet af denne proces har jeg tilegnet mig viden om design og færdigheder inden for HTML, CSS, Photoshop og InDesign.
+                        I begyndelsen af designprocessen undersøgte jeg flat design og udviklede et moodboard som et visuelt pejlemærke; Da jeg begyndte at lave hjemmesiden bevægede jeg mig bort fra farvevalget i mit moodboard, men benyttede gennemgående flat designs principper om brugervenlighed, simplicitet og overskuelighed, samt lyse og klare nuancer i farvevalget.
+                        Jeg har benyttet for to skrifttyper; til brødteksten har jeg valgt en sans serif, da denne type er velegnet til at læse større tekstmængder på web. Til overskrifterne har jeg valgt en display type med seriffer i et mere cartoon-agtigt og samtidig moderne design, som passer godt til det legesyge element i flat design. Forskellen på skrifttyperne skaber et interessant samspil.</p>
                 </div>
                 <div class="col">
                     <div class="container">
