--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,10 @@
             <div class="sectionwrapper">
                 <div class="col">
                     <h2>RESPONSIVE SITE</h2>
-                    <p>I Tema 1, skulle vi lave vores stilartside responsivt.</p>
+                    <p>I Tema 1, skulle vi lave vores stilartside, hvor vi hver især fik vores egen stilart. Denne hjemmeside skulle vi så lave responsiv, så den kan ses på forskellige platforme og devices. I begyndelsen af forløbet blev vi introduceret til HTML og CSS, som er essensen af grundlæggende web og man kommer ikke langt uden kendskab til disse indenfor web-verdenen.
+                        Vi blev også introduceret til flexbox, layoutdiagrammer, styletile og at det altid er mobile-first, da det altid er nemmere, at skalere op og tilføje ting på større skærme, ved brug af mediaqueries.</p>
+                    <br>
+                    <p>Stilarten jeg fik tildelt var Pop art, som har rigtig mange referencer til popkulturen og massesamfundet.</p>
                 </div>
                 <div class="col">
                     <div class="container">
@@ -80,22 +83,32 @@
             <div class="sectionwrapper">
                 <div class="col">
                     <h2>Prototyper</h2>
-                    <p>I Tema 2, skulle vi lave en prototype af en webshop og i gruppearbejde lave en prototype til KEA.</p>
+                    <p>I Tema 2, skulle vi lave en prototype af en webshop og i gruppearbejde lave en prototype til en app omkring studielivet på KEA.
+                        <br>
+                        Det første vi lavede var vores egen klikbare prototype af en lille webshop med max 10 produkter, hvor fokus var, at arbejde med UI og UX elementer og producere et købsflow for kunden via. prototypen. Vi kunne vælge mellem nogle forskellige kriterier, som vores webshop skulle sælge og hvem målgruppen var. Min målgruppe var ældre og skulle sælge LP'er fra 60'erne. I denne opgave blev vi introduceret til Adobe XD, hvor vi laver vores HI-FI prototype ud fra vores LO-FI prototype som oftes er lavet i hånden.
+                    </p>
+                    <br>
+                    <p>I gruppeopgaven skulle </p>
+
                 </div>
                 <div class="col">
                     <div class="container">
                         <a href="https://xd.adobe.com/view/b15a5c5d-dbcb-4eea-6e8b-536cabcaf950-c76b/">
-                            <img src="billeder/vinylen.JPG" alt="splashbillede">
+                            <img src="billeder/vinylen.JPG" alt="egen prototype">
                             <div class="centered">Tryk her for at gå til siden</div>
                         </a>
+                        <a href="dataindsamling_sylvester.pdf">DATAINDSAMLING</a>
                     </div>
                 </div>
                 <div class="col">
                     <div class="container">
                         <a href="https://xd.adobe.com/view/39f6770a-bb3f-44ca-72ca-490c11e05706-4fc7/">
-                            <img src="billeder/keaplan.jpg" alt="splashbillede">
+                            <img src="billeder/keaplan.jpg" alt="gruppe prototype">
                             <div class="centered">Tryk her for at gå til siden</div>
+                            <a href="designsprint.pdf">DESIGNSPRINT DOKUMENTATION</a>
+
                         </a>
+
                     </div>
                 </div>
 
@@ -111,7 +124,8 @@
                     <h2>ANIMATIONSSPIL</h2>
                     <p>I Tema 1, skulle vi lave vores stilartside responsivt. Under dette forløb har jeg udarbejdet en hjemmeside om stilarten flat design. I løbet af denne proces har jeg tilegnet mig viden om design og færdigheder inden for HTML, CSS, Photoshop og InDesign.
                         I begyndelsen af designprocessen undersøgte jeg flat design og udviklede et moodboard som et visuelt pejlemærke; Da jeg begyndte at lave hjemmesiden bevægede jeg mig bort fra farvevalget i mit moodboard, men benyttede gennemgående flat designs principper om brugervenlighed, simplicitet og overskuelighed, samt lyse og klare nuancer i farvevalget.
-                        Jeg har benyttet for to skrifttyper; til brødteksten har jeg valgt en sans serif, da denne type er velegnet til at læse større tekstmængder på web. Til overskrifterne har jeg valgt en display type med seriffer i et mere cartoon-agtigt og samtidig moderne design, som passer godt til det legesyge element i flat design. Forskellen på skrifttyperne skaber et interessant samspil.</p>
+                        Jeg har benyttet for to skrifttyper; til brødteksten har jeg valgt en sans serif, da denne type er velegnet til at læse større tekstmængder på web. Til overskrifterne har jeg valgt en display type med seriffer i et mere cartoon-agtigt og samtidig moderne design, som passer godt til det legesyge element i flat design. Forskellen på skrifttyperne skaber et interessant samspil.
+                    </p>
                 </div>
                 <div class="col">
                     <div class="container">
@@ -119,6 +133,7 @@
                             <img src="billeder/Startskaermwr.svg" alt="startskærm">
                             <div class="centered">Tryk her for at gå til siden</div>
                         </a>
+                        <a href="http://sylvesterflaaten.dk/kea/04_animation/spil1/index.html">ASSETLISTEN</a>
                     </div>
                 </div>
                 <div class="col">
@@ -127,6 +142,7 @@
                             <img src="billeder/startskaerm.svg" alt="startskærm">
                             <div class="centered">Tryk her for at gå til siden</div>
                         </a>
+                        <a href="http://sylvesterflaaten.dk/kea/04_animation/gruppe_6_dokumentationssite/">DESIGNDOKUMENTATION</a>
                     </div>
                 </div>
 
@@ -144,6 +160,13 @@
                 <div class="col">
                     <div class="video_responsive"><video width="100%" poster="billeder/salen.jpg" controls>
                             <source src="video/Emdrupkirke1080.mp4" type="video/mp4">
+                            <source src="mov_bbb.ogg" type="video/ogg">
+                            Your browser does not support HTML5 video.
+                        </video></div>
+                </div>
+                <div class="col">
+                    <div class="video_responsive"><video width="100%" poster="billeder/kontrast.jpg" controls>
+                            <source src="video/pilotvideo.mp4" type="video/mp4">
                             <source src="mov_bbb.ogg" type="video/ogg">
                             Your browser does not support HTML5 video.
                         </video></div>
