--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Forside</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Handlee&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans|Open+Sans|Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+
 
     <!--//favicon//-->
     <link rel="apple-touch-icon" sizes="180x180" href="myIcons/apple-touch-icon.png">
@@ -32,10 +36,10 @@
                 <div class="dropdown">
                     <a href="portfolio.html"> PORTFOLIO </a>
                     <div class="dropdown-content">
-                        <a href="portfolio.html">WEB</a>
-                        <a href="#">UX</a>
-                        <a href="#">ANIMATION</a>
-                        <a href="#">INDHOLD</a>
+                        <a href="portfolio.html#gweb">WEB</a>
+                        <a href="portfolio.html#gux">UX</a>
+                        <a href="portfolio.html#ganimation">ANIMATION</a>
+                        <a href="portfolio.html#gindhold">INDHOLD</a>
                     </div>
                 </div>
                 <a href="om.html"> OM MIG </a>
@@ -45,7 +49,7 @@
 
     </header>
 
-    <section id="splash" class="slide_in"></section>
+    <section id="splash" class="swing_in"></section>
     <div class="topbtn">
         <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     </div>
