--- a/om.html
+++ b/om.html
@@ -7,6 +7,10 @@
     <title>Om</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Handlee&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans|Open+Sans|Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+
 
     <!--//favicon//-->
     <link rel="apple-touch-icon" sizes="180x180" href="myIcons/apple-touch-icon.png">
@@ -32,10 +36,10 @@
                 <div class="dropdown">
                     <a href="portfolio.html"> PORTFOLIO </a>
                     <div class="dropdown-content">
-                        <a href="portfolio.html">WEB</a>
-                        <a href="#">UX</a>
-                        <a href="#">ANIMATION</a>
-                        <a href="#">INDHOLD</a>
+                        <a href="portfolio.html#gweb">WEB</a>
+                        <a href="portfolio.html#gux">UX</a>
+                        <a href="portfolio.html#ganimation">ANIMATION</a>
+                        <a href="portfolio.html#gindhold">INDHOLD</a>
                     </div>
                 </div>
                 <a href="om.html"> OM MIG </a>
@@ -44,6 +48,28 @@
         </div>
 
     </header>
+
+    <section id="om">
+        <h1>OM MIG</h1>
+        <div class="sectionwrapper">
+            <div class="col">
+                <h2>SYLVESTER MORTENSEN FLÅTEN</h2> <br> <br>
+                <p>
+                    Jeg er hele 24 år og studerer Multimediedesign på Københavns Erhvervsakademi. <br>
+                    Interessen for det grafiske har altid været stor. <br> <br>
+                    Jeg er halv dansk og halv nordmand. Min mor er fra Norge, <br>nærmere betegnet Sandnessjøen, som ligger lidt syd for Bodø. <br>Broen fra forsiden er netop broen til Sandnessjøen, som jeg har <br>kørt over så mange gange, hvor der er utrolig flot natur. <br><br>
+                    Jeg har altid haft <b>stor</b> interesse for fodbold, og har selv spillet <br>fodbold siden jeg var helt lille, helt indtil gymnasiet, hvor de <br>fleste skavanker begyndte at melde sin ankomst, samtidig med <br>at der kom andre interesser, så som alkohol og fester. Jeg ser dog <br>stadig en masse fodbold og har altid været kæmpe Liverpool fan, <br>så der er ikke én kamp der bliver misset, selv i dårlige tider.
+                </p>
+
+            </div>
+            <div class="col">
+                <img src="billeder/ommig.jpg" alt="selvportræt">
+
+            </div>
+
+        </div>
+
+    </section>
 
     <script src="script.js"></script>
 </body>
