--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=Handlee&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans|Open+Sans|Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+
 
     <!--//favicon//-->
     <link rel="apple-touch-icon" sizes="180x180" href="myIcons/apple-touch-icon.png">
@@ -59,9 +61,9 @@
                 <div class="col">
                     <h2>RESPONSIVE SITE</h2>
                     <p>I Tema 1, skulle vi lave vores stilartside, hvor vi hver især fik vores egen stilart. Denne hjemmeside skulle vi så lave responsiv, så den kan ses på forskellige platforme og devices. I begyndelsen af forløbet blev vi introduceret til HTML og CSS, som er essensen af grundlæggende web og man kommer ikke langt uden kendskab til disse indenfor web-verdenen.
+                        Stilarten jeg fik tildelt var Pop art, som har rigtig mange referencer til popkulturen og massesamfundet.<br> <br>
                         Vi blev også introduceret til flexbox, layoutdiagrammer, styletile og at det altid er mobile-first, da det altid er nemmere, at skalere op og tilføje ting på større skærme, ved brug af mediaqueries.</p>
-                    <br>
-                    <p>Stilarten jeg fik tildelt var Pop art, som har rigtig mange referencer til popkulturen og massesamfundet.</p>
+
                 </div>
                 <div class="col">
                     <div class="container">
@@ -83,12 +85,12 @@
             <div class="sectionwrapper">
                 <div class="col">
                     <h2>Prototyper</h2>
-                    <p>I Tema 2, skulle vi lave en prototype af en webshop og i gruppearbejde lave en prototype til en app omkring studielivet på KEA.
+                    <p>I Tema 3, skulle vi lave en prototype af en webshop og i gruppearbejde lave en prototype til en app omkring studielivet på KEA.
                         <br>
                         Det første vi lavede var vores egen klikbare prototype af en lille webshop med max 10 produkter, hvor fokus var, at arbejde med UI og UX elementer og producere et købsflow for kunden via. prototypen. Vi kunne vælge mellem nogle forskellige kriterier, som vores webshop skulle sælge og hvem målgruppen var. Min målgruppe var ældre og skulle sælge LP'er fra 60'erne. I denne opgave blev vi introduceret til Adobe XD, hvor vi laver vores HI-FI prototype ud fra vores LO-FI prototype som oftes er lavet i hånden.
                     </p>
                     <br>
-                    <p>I gruppeopgaven skulle </p>
+                    <p>I gruppeopgaven skulle vi indsamle en masse informationer, som vi så skulle bruge til, at udvikle vores prototype af en app til studielivet på KEA. Vi brugte google sprint design igennem processen. Vores prototype havde henblik på at forbedre og forenkle elevernes hverdag på KEA, ved at gøre det mere struktureret og overskueligt med appen.</p>
 
                 </div>
                 <div class="col">
@@ -122,9 +124,11 @@
             <div class="sectionwrapper">
                 <div class="col">
                     <h2>ANIMATIONSSPIL</h2>
-                    <p>I Tema 1, skulle vi lave vores stilartside responsivt. Under dette forløb har jeg udarbejdet en hjemmeside om stilarten flat design. I løbet af denne proces har jeg tilegnet mig viden om design og færdigheder inden for HTML, CSS, Photoshop og InDesign.
-                        I begyndelsen af designprocessen undersøgte jeg flat design og udviklede et moodboard som et visuelt pejlemærke; Da jeg begyndte at lave hjemmesiden bevægede jeg mig bort fra farvevalget i mit moodboard, men benyttede gennemgående flat designs principper om brugervenlighed, simplicitet og overskuelighed, samt lyse og klare nuancer i farvevalget.
-                        Jeg har benyttet for to skrifttyper; til brødteksten har jeg valgt en sans serif, da denne type er velegnet til at læse større tekstmængder på web. Til overskrifterne har jeg valgt en display type med seriffer i et mere cartoon-agtigt og samtidig moderne design, som passer godt til det legesyge element i flat design. Forskellen på skrifttyperne skaber et interessant samspil.
+                    <p>I Tema 4, skulle vi lave vores eget spil via. JavaScript, CSS og HTML og et spil omkring billeddeling, som vi skulle lave i en gruppe.
+                        <br>
+                        Vi benyttede os af aktivitetsdiagrammer og statemachinediagrammer til begge spil, hvilket gjorde det nemmere, når man først skulle begynde på selve kodningen. <br>
+                        Mit eget spil hedder White Russian, hvor man skal blande en white russian til selveste hr. Putin, og hvis man failede det, ville Putin trykke på den røde knap. <br>
+                        I gruppeopgaven skulle vi lave et spil, med henblik på billeddeling og PrivatSnak.dks budskab. Her lavede vi brugertest til slut via. vores fernisering, hvor spillet blev testet af vores målgruppe på 13-15 årige folkeskoleelever.
                     </p>
                 </div>
                 <div class="col">
@@ -155,26 +159,29 @@
             <div class="sectionwrapper">
                 <div class="col">
                     <h2>Redesign</h2>
-                    <p>I Tema 1, skulle vi lave vores stilartside responsivt.</p>
+                    <p>I Tema 5, skulle vi lave en pilotvideo, der skulle omhandle et interview med en person omkring deres passion. Her interviewede vi Lenon og Mikkel om deres passion for musik. <br>
+                        Men den helt store opgave var, at lave et redesign af et brand eller en virksomheds hjemmeside. Dette var en gruppeopgave, hvor vi landede på Emdrup kirke, som vi mente, havde brug for et redesign. Her skulle vi kode en ny hjemmeside, med vores eget design og lave en video om kirken. </p>
+
+                    <a href="http://sylvesterflaaten.dk/kea/05_indhold/redesign_emdrup/index.html">LINK TIL REDESIGN</a> <br>
+                    <a href="http://sylvesterflaaten.dk/kea/05_indhold/emdrup_kirke_redesign/index.html">LINK TIL DOKUMENTATIONSSITE</a>
                 </div>
                 <div class="col">
                     <div class="video_responsive"><video width="100%" poster="billeder/salen.jpg" controls>
                             <source src="video/Emdrupkirke1080.mp4" type="video/mp4">
-                            <source src="mov_bbb.ogg" type="video/ogg">
+
                             Your browser does not support HTML5 video.
                         </video></div>
                 </div>
                 <div class="col">
                     <div class="video_responsive"><video width="100%" poster="billeder/kontrast.jpg" controls>
                             <source src="video/pilotvideo.mp4" type="video/mp4">
-                            <source src="mov_bbb.ogg" type="video/ogg">
+
                             Your browser does not support HTML5 video.
                         </video></div>
                 </div>
             </div>
 
 
-            </div>
         </section>
 
 
