--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title>Forside</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Handlee&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans|Open+Sans|Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap" rel="stylesheet">
 
 
     <!--//favicon//-->
@@ -49,11 +48,7 @@
 
     </header>
 
-    <section id="splash" class="swing_in"></section>
-
-    <div class="topbtn">
-        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-    </div>
+    <div id="splash" class="swing_in"></div>
 
     <script src="script.js"></script>
 </body>
