--- a/om.html
+++ b/om.html
@@ -7,9 +7,8 @@
     <title>Om</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Handlee&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans|Open+Sans|Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap" rel="stylesheet">
 
 
     <!--//favicon//-->
@@ -50,10 +49,10 @@
     </header>
 
     <section id="om">
-        <h1>OM MIG</h1>
+        <h2>OM MIG</h2>
         <div class="sectionwrapper">
             <div class="col">
-                <h2>SYLVESTER MORTENSEN FLÅTEN</h2> <br> <br>
+                <h3>SYLVESTER MORTENSEN FLÅTEN</h3> <br> <br>
                 <p>
                     Jeg er hele 24 år og studerer Multimediedesign på Københavns Erhvervsakademi. <br>
                     Interessen for det grafiske har altid været stor. <br> <br>
