--- a/portfolio.html
+++ b/portfolio.html
@@ -7,9 +7,8 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Handlee&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans|Open+Sans|Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap" rel="stylesheet">
 
 
     <!--//favicon//-->
@@ -49,17 +48,16 @@
 
     </header>
 
-    <!--    <section id="portfolio" class="swing_in"></section>-->
 
 
-    <section id="portfolio">
+    <div id="portfolio">
 
 
         <section id="gweb">
-            <h1>GRUNDLÆGGENDE WEB</h1>
+            <h2>GRUNDLÆGGENDE WEB</h2>
             <div class="sectionwrapper">
                 <div class="col">
-                    <h2>RESPONSIVE SITE</h2>
+                    <h3>RESPONSIVE SITE</h3>
                     <p>I Tema 1, skulle vi lave vores stilartside, hvor vi hver især fik vores egen stilart. Denne hjemmeside skulle vi så lave responsiv, så den kan ses på forskellige platforme og devices. I begyndelsen af forløbet blev vi introduceret til HTML og CSS, som er essensen af grundlæggende web og man kommer ikke langt uden kendskab til disse indenfor web-verdenen.
                         Stilarten jeg fik tildelt var Pop art, som har rigtig mange referencer til popkulturen og massesamfundet.<br> <br>
                         Vi blev også introduceret til flexbox, layoutdiagrammer, styletile og at det altid er mobile-first, da det altid er nemmere, at skalere op og tilføje ting på større skærme, ved brug af mediaqueries.</p>
@@ -81,10 +79,10 @@
 
 
         <section id="gux">
-            <h1>GRUNDLÆGGENDE UX</h1>
+            <h2>GRUNDLÆGGENDE UX</h2>
             <div class="sectionwrapper">
                 <div class="col">
-                    <h2>Prototyper</h2>
+                    <h3>Prototyper</h3>
                     <p>I Tema 3, skulle vi lave en prototype af en webshop og i gruppearbejde lave en prototype til en app omkring studielivet på KEA.
                         <br>
                         Det første vi lavede var vores egen klikbare prototype af en lille webshop med max 10 produkter, hvor fokus var, at arbejde med UI og UX elementer og producere et købsflow for kunden via. prototypen. Vi kunne vælge mellem nogle forskellige kriterier, som vores webshop skulle sælge og hvem målgruppen var. Min målgruppe var ældre og skulle sælge LP'er fra 60'erne. I denne opgave blev vi introduceret til Adobe XD, hvor vi laver vores HI-FI prototype ud fra vores LO-FI prototype som oftes er lavet i hånden.
@@ -107,9 +105,9 @@
                         <a href="https://xd.adobe.com/view/39f6770a-bb3f-44ca-72ca-490c11e05706-4fc7/">
                             <img src="billeder/keaplan.jpg" alt="gruppe prototype">
                             <div class="centered">Tryk her for at gå til siden</div>
-                            <a href="designsprint.pdf">DESIGNSPRINT DOKUMENTATION</a>
 
                         </a>
+                        <a href="designsprint.pdf">DESIGNSPRINT DOKUMENTATION</a>
 
                     </div>
                 </div>
@@ -120,10 +118,10 @@
 
 
         <section id="ganimation">
-            <h1>GRUNDLÆGGENDE ANIMATION</h1>
+            <h2>GRUNDLÆGGENDE ANIMATION</h2>
             <div class="sectionwrapper">
                 <div class="col">
-                    <h2>ANIMATIONSSPIL</h2>
+                    <h3>ANIMATIONSSPIL</h3>
                     <p>I Tema 4, skulle vi lave vores eget spil via. JavaScript, CSS og HTML og et spil omkring billeddeling, som vi skulle lave i en gruppe.
                         <br>
                         Vi benyttede os af aktivitetsdiagrammer og statemachinediagrammer til begge spil, hvilket gjorde det nemmere, når man først skulle begynde på selve kodningen. <br>
@@ -155,10 +153,10 @@
         </section>
 
         <section id="gindhold">
-            <h1>GRUNDLÆGGENDE INDHOLD</h1>
+            <h2>GRUNDLÆGGENDE INDHOLD</h2>
             <div class="sectionwrapper">
                 <div class="col">
-                    <h2>Redesign</h2>
+                    <h3>Redesign</h3>
                     <p>I Tema 5, skulle vi lave en pilotvideo, der skulle omhandle et interview med en person omkring deres passion. Her interviewede vi Lenon og Mikkel om deres passion for musik. <br>
                         Men den helt store opgave var, at lave et redesign af et brand eller en virksomheds hjemmeside. Dette var en gruppeopgave, hvor vi landede på Emdrup kirke, som vi mente, havde brug for et redesign. Her skulle vi kode en ny hjemmeside, med vores eget design og lave en video om kirken. </p>
 
@@ -185,15 +183,9 @@
         </section>
 
 
-    </section>
-
-
-
-
-
-    <div class="topbtn">
-        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     </div>
+
+
 
     <script src="script.js"></script>
 </body>
